samples/_failures_safe/1761724576_3e6cfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce6f654e.c: In function ‘main’:
./samples/SAFE/__tmp_ce6f654e.c:131:5: error: expected expression at end of input
  131 |     while (fgets(line, sizeof(line), stdin) != NULL)
      |     ^~~~~
./samples/SAFE/__tmp_ce6f654e.c:131:5: error: expected declaration or statement at end of input
